--- a/src/app/dashboard/candidat/candidate-edit/candidate-edit.component.html
+++ b/src/app/dashboard/candidat/candidate-edit/candidate-edit.component.html
@@ -181,7 +181,7 @@
                       [items]="Jobs" required>
                     </ng-select>
 
-                    <p class="text-muted" *ngIf="editor.Form._oldJob">{{editor.Form._oldJob}}</p>
+                    <p class="text-muted" *ngIf="editor.Form._Jobs">{{editor.Form._Jobs}}</p>
                   </div>
                 </div>
               </div>
