--- a/src/app/dashboard/taxonomy/edit-taxonomy/edit-taxonomy.component.html
+++ b/src/app/dashboard/taxonomy/edit-taxonomy/edit-taxonomy.component.html
@@ -19,7 +19,7 @@
           <div class="col-sm-12">
             <div class="form-group">
               <label>Status</label>
-              <select class="selectpicker form-control" name="activated" [(ngModel)]="term.activated" data-style="btn-solid"
+              <select class="form-control" name="activated" [(ngModel)]="term.activated" data-style="btn-solid"
                 required>
                 <option value="1">Publier</option>
                 <option value="0">Mettre en attente</option>
