Change "status" to "statut"

--- a/src/app/dashboard/company/company-lists/company-lists.component.html
+++ b/src/app/dashboard/company/company-lists/company-lists.component.html
@@ -9,8 +9,8 @@
 
         <div class="row mb-4">
           <div class="col-md-4 mb-2 mb-sm-0">
-            <select class="selectpicker form-control " id="type-status" title="Tous les status" data-style="btn-solid">
-              <option value="">Tous les status</option>
+            <select class="selectpicker form-control " id="type-status" title="Tous les statut" data-style="btn-solid">
+              <option value="">Tous les statut</option>
               <option value="pending">En attente</option>
               <option value="1">Publier</option>
               <option value="0">Désactiver</option>
@@ -46,7 +46,7 @@
               <th>#</th>
               <th>Entreprise</th>
               <th>Date d'ajout</th>
-              <th>Status</th>
+              <th>Statut</th>
               <th>Secteur d'activité</th>
               <th>Région</th>
               <th>Modifier</th>
