--- a/src/app/dashboard/offers/offer-edit/offer-edit.component.html
+++ b/src/app/dashboard/offers/offer-edit/offer-edit.component.html
@@ -37,7 +37,7 @@
 
             <div class="row">
               <div class="col-sm-6 form-group mb-4">
-                <label class="font-bold">Status</label>
+                <label class="font-bold">Statut</label>
                 <div>
                   <select class="form-control" name="status" (ngModelChange)="onChangeStatus($event)" [(ngModel)]="Editor.offer_status"
                     title="Status de l'offre">
