--- a/src/app/dashboard/offers/offer-lists/offer-lists.component.html
+++ b/src/app/dashboard/offers/offer-lists/offer-lists.component.html
@@ -57,7 +57,7 @@
               <th>Position</th>
               <th>Type</th>
               <th>Date limite</th>
-              <th>Status</th>
+              <th>Statut</th>
               <th>Secteur d'activité</th>
               <th>Région</th>
               <th class="no-sort">Action</th>
