--- a/src/app/dashboard/taxonomy/edit-taxonomy/edit-taxonomy.component.html
+++ b/src/app/dashboard/taxonomy/edit-taxonomy/edit-taxonomy.component.html
@@ -18,7 +18,7 @@
           </div>
           <div class="col-sm-12">
             <div class="form-group">
-              <label>Status</label>
+              <label>Statut</label>
               <select class="form-control" name="activated" [(ngModel)]="term.activated" data-style="btn-solid"
                 required>
                 <option value="1">Publier</option>
