--- a/src/app/dashboard/taxonomy/taxonomy.component.html
+++ b/src/app/dashboard/taxonomy/taxonomy.component.html
@@ -15,7 +15,7 @@
             <tr>
               <th>ID</th>
               <th>Nom</th>
-              <th>Status</th>
+              <th>Statut</th>
               <th class="no-sort">Action</th>
             </tr>
           </thead>
