--- a/src/app/directives/account/status-changer/status-changer.component.html
+++ b/src/app/directives/account/status-changer/status-changer.component.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog" role="document">
       <form class="modal-content">
         <div class="modal-header p-4">
-          <h5 class="modal-title">Modification de status</h5>
+          <h5 class="modal-title">Modification de statut</h5>
           <button class="close" type="button" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">×</span>
           </button>
