--- a/src/app/directives/candidat/archived-candidate/archived-candidate.component.html
+++ b/src/app/directives/candidat/archived-candidate/archived-candidate.component.html
@@ -26,7 +26,7 @@
                   <th>#</th>
                   <th>Nom</th>
                   <th>Prénom</th>
-                  <th>Status</th>
+                  <th>Statut</th>
                   <th>Réference</th>
                   <th>Position</th>
                   <th class="no-sort">Modifier</th>
