--- a/src/app/dashboard/candidat/candidat-list/candidat-list.component.html
+++ b/src/app/dashboard/candidat/candidat-list/candidat-list.component.html
@@ -9,8 +9,8 @@
         <form class="form-success mb-4">
           <div class="row mb-4">
             <div class="col-md-4 mb-2 mb-sm-0">
-              <select class="selectpicker form-control " id="type-status" title="Tous les status" data-style="btn-solid">
-                <option value="">Tous les status</option>
+              <select class="selectpicker form-control " id="type-status" title="Tous les statut" data-style="btn-solid">
+                <option value="">Tous les statut</option>
                 <option value="pending">En attente</option>
                 <option value="1">Publier</option>
                 <option value="0">Désactiver</option>
@@ -65,7 +65,7 @@
                 <th>#</th>
                 <th>Nom</th>
                 <th>Prénom</th>
-                <th>Status</th>
+                <th>Statut</th>
                 <th>Réference</th>
                 <th>Position</th>
                 <th>Secteur d'activité</th>
